FACES-1714 Develop Liferay Faces Showcase (added use-cases for alloy:form, alloy:inputFile, and h:inputFile; Updated use-case text for bridge:inputFile; Updated use-cases for alloy:outputScript to have wider columns).

--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -4,6 +4,7 @@ buttonlink_alloy_commandLink=general:commandLink.xhtml|immediate:commandLink.xht
 buttonlink_alloy_link=general:link.xhtml|navigation:link.xhtml,navigation-rule.xml|param:link.xhtml
 data_alloy_dataTable=general:dataTable.xhtml,DataTableModelBean.java,DataTableBackingBean.java
 input_alloy_inputDate=general:inputDate.xhtml,InputDateModelBean.java|instant-ajax:inputDate.xhtml,InputDateModelBean.java|date-pattern:inputDate.xhtml,InputDateModelBean.java|localization:inputDate.xhtml,InputDateModelBean.java|min-max-date:inputDate.xhtml,InputDateModelBean.java|multiple-panes:inputDate.xhtml,InputDateModelBean.java
+input_alloy_inputFile=general:inputFile.xhtml,inputFileCommon.xhtml,InputFileModelBean.java,InputFileBackingBean.java|instant-ajax:inputFile.xhtml,inputFileCommon.xhtml,InputFileModelBean.java,InputFileBackingBean.java|multiple:inputFile.xhtml,inputFileCommon.xhtml,InputFileModelBean.java,InputFileBackingBean.java|preview:inputFile.xhtml,inputFileCommon.xhtml,InputFileModelBean.java,InputFileBackingBean.java|progress:inputFile.xhtml,inputFileCommon.xhtml,InputFileModelBean.java,InputFileBackingBean.java|validation:inputFile.xhtml,inputFileCommon.xhtml,InputFileModelBean.java,InputFileBackingBean.java
 input_alloy_inputHidden=general:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java|conversion:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java|immediate:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java|validation:inputHidden.xhtml,InputHiddenModelBean.java,InputHiddenBackingBean.java
 input_alloy_inputSecret=general:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java|immediate:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java|redisplay:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java|validation:inputSecret.xhtml,InputSecretModelBean.java,InputSecretBackingBean.java
 input_alloy_inputSourceCode=general:inputSourceCode.xhtml,InputSourceCodeModelBean.java,InputSourceCodeBackingBean.java|default-value:inputSourceCode.xhtml,InputSourceCodeModelBean.java,InputSourceCodeBackingBean.java
@@ -24,6 +25,7 @@ panel_alloy_accordion=general:accordion.xhtml|data-model:accordion.xhtml,Accordi
 panel_alloy_dialog=general:dialog.xhtml,DialogModelBean.java,DialogBackingBean.java
 panel_alloy_field=general:field.xhtml,FieldBackingBean.java|message-styling:field.xhtml,FieldBackingBean.java
 panel_alloy_fieldset=general:fieldset.xhtml
+panel_alloy_form=general:form.xhtml,FormBackingBean.java|instant-ajax:form.xhtml,FormBackingBean.java|view-params:form.xhtml,FormBackingBean.java
 panel_alloy_panelGrid=general:panelGrid.xhtml
 panel_alloy_panelGroup=general:panelGroup.xhtml
 panel_alloy_popover=general:popover.xhtml,PopoverModelBean.java,PopoverBackingBean.java
