--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -53,6 +53,10 @@ alloy-field-message-styling-example-2=`FacesMessage.SEVERITY_WARN`
 alloy-field-message-styling-example-3=`FacesMessage.SEVERITY_ERROR`
 alloy-fieldset=[javadoc:com.liferay.faces.alloy.component.fieldset.Fieldset] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;fieldset&gt;` element in order to group form elements.
 alloy-fieldset-general=A *header* for the component can be specified via the [vdldoc:alloy:fieldset:legend] attribute.
+alloy-form=[javadoc:com.liferay.faces.alloy.component.form.Form] is a [javadoc:javax.faces.component.UIForm] component that renders a `&lt;form&gt;` element. Since it extends [javadoc:javax.faces.component.html.HtmlForm], it supports all the features of [vdldoc:h:form].
+alloy-form-general=By default, forms are submitted as a non-Ajax (full-page) postback.
+alloy-form-instant-ajax=Forms can be submitted via Ajax by adding an [vdldoc:f:ajax] child tag to a component such as [vdldoc:alloy:commandButton].
+alloy-form-view-params= View Parameters can be automatically included in full-page postbacks by setting [vdldoc:alloy:form:includeViewParams]=`true`.
 alloy-icon=[javadoc:com.liferay.faces.alloy.component.icon.Icon] is a [javadoc:javax.faces.component.UIComponent] that renders a span which contains an icon specified by the [vdldoc:alloy:icon:name] attribute.
 alloy-icon-general=The component displays an *icon* specified by the [vdldoc:alloy:icon:name] attribute. Names are described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#icons" target="_blank">Alloy Base CSS</a> documentation.
 alloy-image=[javadoc:com.liferay.faces.alloy.component.image.Image] is a [javadoc:javax.faces.component.UIGraphic] component that renders an `&lt;img&gt;` element. Since it extends [javadoc:javax.faces.component.html.HtmlGraphicImage], it supports all the features of [vdldoc:h:image].
@@ -74,6 +78,15 @@ alloy-inputdate-localization-example-1=Hard coded Brazilian Portuguese locale
 alloy-inputdate-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
 alloy-inputdate-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:alloy:inputDate:minimumDate] and [vdldoc:alloy:inputDate:maximumDate] attributes. The component performs server side validation to ensure that submitted values are within the specified range.
 alloy-inputdate-multiple-panes=The number of month *panes* that are displayed can be specified via the [vdldoc:alloy:inputDate:panes] attribute (maximum of 3).
+alloy-inputfile=[javadoc:com.liferay.faces.alloy.component.inputfile.InputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input&gt;` element with `type="file"`. Since it extends [javadoc:javax.faces.component.html.HtmlInputFile], it supports all the features of [vdldoc:h:inputFile] and also supports multi-file uploads, instant-Ajax, preview, upload progress, and validation.
+alloy-input-file-benefits-description=since it works in *portlet and webapp* environments and also supports preview, upload progress, and validation.
+alloy-inputfile-general=By default, one file can be uploaded as a non-Ajax (full-page) postback. 
+alloy-inputfile-instant-ajax=Files can be uploaded *instantly* via Ajax by setting [vdldoc:alloy:inputFile:auto]=`true` and by adding an [vdldoc:f:ajax] child tag. 
+alloy-inputfile-multiple=Multi-file upload is supported by setting the HTML5 passthrough attribute [vdldoc:alloy:inputFile:multiple]=`multiple`. 
+alloy-inputfile-preview=A client-side preview of selected filenames and sizes can be displayed by setting [vdldoc:alloy:inputFile:showPreview]=`true`. 
+alloy-inputfile-progress=Upload progress is displayed by setting [vdldoc:alloy:inputFile:showProgress]=`true`. If [vdldoc:alloy:inputFile:appendNewFiles]=`true` then the selected files are appended to the preview table. Otherwise, the preview table is cleared when new files are selected. Files can be uploaded *instantly* via Ajax by setting auto=true and by adding an f:ajax child tag. One *potential drawback* of showing progress is that each file is uploaded in a separate XmlHttpRequest.
+alloy-inputfile-validation=Validation is accomplished by adding an [vdldoc:alloy:validateFile] child tag. The [vdldoc:alloy:validateFile:contentTypes] attribute is a comma-delimited list of content types such as `application/pdf,image/png`. The [vdldoc:alloy:validateFile:maxFileSize] attribute is a [javadoc:java.lang.Long] integer that indicates the maximum number of bytes that can be uploaded for each file. 
+alloy-inputfile-validation-example=Upload .pdf or .png files with max size of 600,000 bytes
 alloy-inputhidden=[javadoc:com.liferay.faces.alloy.component.inputhiddenarea.InputHidden] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input&gt;` element with *type=*`hidden`. Since it extends [javadoc:javax.faces.component.html.HtmlInputHidden], it supports all the features of [vdldoc:h:inputHidden].
 alloy-inputhidden-validation=The [vdldoc:alloy:inputHidden:value] attribute can be *validated* via the [vdldoc:alloy:inputHidden:validator] attribute or by specifying a [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputHidden:validatorMessage] attribute.
 alloy-inputhidden-immediate=When the [vdldoc:alloy:inputHidden:immediate] attribute is `true`, the submitted value is converted and validated during *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal PROCESS_VALIDATIONS phase.
@@ -247,13 +260,19 @@ alloy-selectthumbrating-instant-ajax=The component supports *instant Ajax* by si
 alloy-tabview=[javadoc:com.liferay.faces.alloy.component.TabView] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders tabs either statically or dynamically.
 alloy-tabview-general=Tabs can be specified *statically* with [vdldoc:alloy:tab] child tags.
 alloy-tabview-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render tabs *dynamically* when the [vdldoc:alloy:tabView:value] attribute is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:tabView:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
+append-new-files=Append New Files
+attribute-value=Attribute Value
 back-to-navigation-with=Back to Navigation with
 birthday=Birthday
 block=Block
-bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.HtmlInputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an *&lt;input type="file" /&gt;* element. The component requires the [vdldoc:h:form:enctype] attribute of the encosing [vdldoc:h:form] tag to be *"multipart/form-data"* and only works in a full-page (non-Ajax) postback.
-bridge-inputfile-general=The HTML5 [vdldoc:bridge:inputFile:multiple] attribute can be set to *"multiple"* in order to support multi-file uploads.
+bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.inputfile.InputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input&gt;` element with `type="file"`. Since it extends [javadoc:javax.faces.component.html.HtmlInputFile], it supports all the features of [vdldoc:h:inputFile] and also supports multi-file uploads.
+bridge-inputfile-general=By default, one file can be uploaded as a non-Ajax (full-page) postback.
+bridge-inputfile-instant-ajax=Files can be uploaded *instantly* via Ajax by adding an [vdldoc:f:ajax] child tag.
+bridge-inputfile-multiple=Multi-file upload is supported by setting the HTML5 passthrough attribute [vdldoc:alloy:inputFile:multiple]=`multiple`.
+bridge-inputfile-portlet-only=The [vdldoc:bridge:inputFile] component is a *legacy* feature of Liferay Faces Bridge that *only works in a portlet* environment* (not in a webapp environment).
 buttonlink=Button/Link
 cancel=Cancel
+choose-files=Choose Files
 clear-the-value-of-the-hidden-input=Clear the value of the hidden input
 click-here-to-execute-the-click-event-callback=Click here to execute the click event callback
 click-here-and-press-the-tab-key=Click here and press the TAB key
@@ -293,7 +312,11 @@ favorite-liferay-benefit=Favorite Liferay Benefit
 field-label=Field Label
 fieldset-legend=Fieldset Legend
 first-name=First Name
+form-action-attribute-view-params-description=The `action` attribute of the rendered `&lt;form&gt;` (shown below) contains view parameters in the query-string. 
 general=General
+h-inputfile=[javadoc:javax.faces.component.html.HtmlInputFile] is a [javadoc:javax.faces.component.UIInput] component for JSF 2.2+ that renders an `&lt;input&gt;` element with `type="file"`.
+h-inputfile-general=By default, one file can be uploaded as a non-Ajax (full-page) postback.
+h-inputfile-instant-ajax=Files can be uploaded *instantly* via Ajax by adding an [vdldoc:f:ajax] child tag.
 header-text=Header Text
 hidden-field=Hidden Field
 hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portlet
@@ -344,6 +367,8 @@ portlet-resourceurl=[javadoc:com.liferay.faces.bridge.component.PortletResourceU
 portlet-resourceurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet resource parameters to the URL. The example below shows how to specify the *javax.faces.resource* and *ln* portlet *resource parameters* in order to get a URL that targets a JSF *image* resource.
 position-mouse-cursor-here=Position mouse cursor here
 primary=Primary
+preview=Preview
+progress=Progress
 rating=Rating
 redisplay=Redisplay
 rendered=Rendered
@@ -361,11 +386,13 @@ sticky-multiple-selection=Sticky Multiple Selection
 submit=Submit
 submit-and-re-render-field=Submit and Re-Render Field
 submit-and-re-render-form=Submit and Re-Render Form
+submit-and-re-render-page=Submit and Re-Render Page
 submit-non-faces-postback=Submit Non-Faces Postback
 success=Success
 text-field=Text Field
 text-from-title-attribute=Text from title attribute
 text-from-value-attribute=Text from value attribute
+the-enclosing-form-must-have-multipart-form-data=The enclosing [vdldoc:alloy:form] must have [vdldoc:alloy:form:enctype]=`multipart/form-data` in order for files to upload correctly.
 the-hidden-input-is-not-rendered=The hidden input is not rendered
 this-is-a-div-that-contains-a-hidden-input=This is a div that contains a hidden input
 this-is-column-1=This is column 1 with width="33"
@@ -391,6 +418,7 @@ valuechangelistener-execution-when-immediate-is-false=ValueChangeListener execut
 valuechangelistener-execution-when-immediate-is-true=ValueChangeListener execution when [vdldoc:alloy:selectOneRadio:immediate] is `true`
 various-styles=Various Styles
 vdl-documentation=VDL Documentation
+view-params=View Params
 vertical-layout=Vertical Layout
 warning=Warning
 which-of-the-following-dates-are-in-the-18th-century=Which of the following dates are in the 18th century? 
