FACES-1972 Develop alloy:inputFile component and associated alloy:validateFile validator (fixed junit classpath problem)

--- a/alloy/pom.xml
+++ b/alloy/pom.xml
@@ -195,6 +195,11 @@
 		</dependency>
 		<!-- END: Only required for file upload -->
 		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-api</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>javax.el</groupId>
 			<artifactId>javax.el-api</artifactId>
 		</dependency>
