FACES-1714 Develop Liferay Faces Showcase (fixed i18n message for bridge:inputFile)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -269,7 +269,7 @@ bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.inputfile.InputFile
 bridge-inputfile-general=By default, one file can be uploaded as a non-Ajax (full-page) postback.
 bridge-inputfile-instant-ajax=Files can be uploaded *instantly* via Ajax by adding an [vdldoc:f:ajax] child tag.
 bridge-inputfile-multiple=Multi-file upload is supported by setting the HTML5 passthrough attribute [vdldoc:alloy:inputFile:multiple]=`multiple`.
-bridge-inputfile-portlet-only=The [vdldoc:bridge:inputFile] component is a *legacy* feature of Liferay Faces Bridge that *only works in a portlet* environment* (not in a webapp environment).
+bridge-inputfile-portlet-only=The [vdldoc:bridge:inputFile] component is a *legacy* feature of Liferay Faces Bridge. Although it has the benefit of supporting *multi-file uploads*, it only works in a *portlet environment* (not in a webapp environment).
 buttonlink=Button/Link
 cancel=Cancel
 choose-files=Choose Files
