--- a/alloy/pom.xml
+++ b/alloy/pom.xml
@@ -77,24 +77,24 @@
 				</dependencies>
 			</plugin>
 			<plugin>
-			    <groupId>com.googlecode.maven-download-plugin</groupId>
-			    <artifactId>download-maven-plugin</artifactId>
-			    <version>1.2.0</version>
-			    <executions>
-			        <execution>
-			            <id>unpack-alloy</id>
-			            <phase>generate-resources</phase>
-			            <goals>
-			                <goal>wget</goal>
-			            </goals>
-			            <configuration>
-			            	<url>https://raw.githubusercontent.com/liferay/liferay-portal/6.2.1-ga2/portal-web/third-party/alloy-${alloyui.version}.zip</url>
-			                <unpack>true</unpack>
-			                <outputDirectory>${project.build.directory}/classes/META-INF/resources</outputDirectory>
-			                <md5>904c2f0b876b6d3f732da5eed46ec977</md5>
-			            </configuration>
-			        </execution>
-			    </executions>
+				<groupId>com.googlecode.maven-download-plugin</groupId>
+				<artifactId>download-maven-plugin</artifactId>
+				<version>1.2.0</version>
+				<executions>
+					<execution>
+						<id>unpack-alloy</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>wget</goal>
+						</goals>
+						<configuration>
+							<url>https://raw.githubusercontent.com/liferay/liferay-portal/6.2.1-ga2/portal-web/third-party/alloy-${alloyui.version}.zip</url>
+							<unpack>true</unpack>
+							<outputDirectory>${project.build.directory}/classes/META-INF/resources</outputDirectory>
+							<md5>904c2f0b876b6d3f732da5eed46ec977</md5>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
@@ -106,33 +106,41 @@
 						</goals>
 						<configuration>
 							<target>
+								<move file="${project.build.directory}/classes/META-INF/resources/alloy-${alloyui.version}/LICENSE.md"
+									tofile="${project.build.directory}/classes/META-INF/alloyui-bsd-license.md" />
 								<move file="${project.build.directory}/classes/META-INF/resources/alloy-${alloyui.version}/build" todir="${project.build.directory}/classes/META-INF/resources/liferay-faces-alloy" />
 								<delete dir="${project.build.directory}/classes/META-INF/resources/alloy-${alloyui.version}" />
-								<replace token="../img/" value="#{resource['liferay-faces-alloy:build/aui-css/img/" dir="${project.build.directory}/classes/META-INF/resources/liferay-faces-alloy/build/aui-css/css">
+								<replace token="../img/" value="#{resource['liferay-faces-alloy:build/aui-css/img/"
+									dir="${project.build.directory}/classes/META-INF/resources/liferay-faces-alloy/build/aui-css/css">
 									<include name="bootstrap.min.css" />
 								</replace>
-								<replace token=".png)" value=".png']})" dir="${project.build.directory}/classes/META-INF/resources/liferay-faces-alloy/build/aui-css/css">
+								<replace token=".png)" value=".png']})"
+									dir="${project.build.directory}/classes/META-INF/resources/liferay-faces-alloy/build/aui-css/css">
 									<include name="bootstrap.min.css" />
 								</replace>
 								<!-- for dialog -->
-								<replace token="url(arrows.png)" value="url(#{resource['liferay-faces-alloy:build/resize-base/assets/skins/sam/arrows.png']})" 
+								<replace token="url(arrows.png)" value="url(#{resource['liferay-faces-alloy:build/resize-base/assets/skins/sam/arrows.png']})"
 									dir="${project.build.directory}/classes/META-INF/resources/liferay-faces-alloy/build/resize-base/assets/skins/sam">
 									<include name="resize-base.css" />
 								</replace>
 								<!-- menus -->
-								<replace token="url(vertical-menu-submenu-indicator.png)" value="url(#{resource['liferay-faces-alloy:build/node-menunav/assets/skins/sam/vertical-menu-submenu-indicator.png']})" 
+								<replace token="url(vertical-menu-submenu-indicator.png)"
+									value="url(#{resource['liferay-faces-alloy:build/node-menunav/assets/skins/sam/vertical-menu-submenu-indicator.png']})"
 									dir="${project.build.directory}/classes/META-INF/resources/liferay-faces-alloy/build/node-menunav/assets/skins/sam">
 									<include name="node-menunav-skin.css" />
 								</replace>
-								<replace token="url(vertical-menu-submenu-indicator.png)" value="url(#{resource['liferay-faces-alloy:build/node-menunav/assets/skins/sam/vertical-menu-submenu-indicator.png']})" 
+								<replace token="url(vertical-menu-submenu-indicator.png)"
+									value="url(#{resource['liferay-faces-alloy:build/node-menunav/assets/skins/sam/vertical-menu-submenu-indicator.png']})"
 									dir="${project.build.directory}/classes/META-INF/resources/liferay-faces-alloy/build/node-menunav/assets/skins/sam">
 									<include name="node-menunav.css" />
 								</replace>
-								<replace token="url(../../../../assets/skins/sam/sprite.png)" value="url(#{resource['liferay-faces-alloy:build/aui-color-palette/assets/skins/sam/sprite.png']})" 
+								<replace token="url(../../../../assets/skins/sam/sprite.png)"
+									value="url(#{resource['liferay-faces-alloy:build/aui-color-palette/assets/skins/sam/sprite.png']})"
 									dir="${project.build.directory}/classes/META-INF/resources/liferay-faces-alloy/build/node-menunav/assets/skins/sam">
 									<include name="node-menunav-skin.css" />
 								</replace>
-								<replace token="url(../../../../assets/skins/sam/sprite.png)" value="url(#{resource['liferay-faces-alloy:build/aui-color-palette/assets/skins/sam/sprite.png']})" 
+								<replace token="url(../../../../assets/skins/sam/sprite.png)"
+									value="url(#{resource['liferay-faces-alloy:build/aui-color-palette/assets/skins/sam/sprite.png']})"
 									dir="${project.build.directory}/classes/META-INF/resources/liferay-faces-alloy/build/node-menunav/assets/skins/sam">
 									<include name="node-menunav.css" />
 								</replace>
@@ -327,7 +335,7 @@
 						</dependencies>
 					</plugin>
 				</plugins>
-			</build>					
+			</build>
 		</profile>
 		<profile>
 			<id>generate-alloy</id>
