FACES-1974 Develop alloy:head component FACES-1714 Develop Liferay Faces Showcase (added use-case for alloy:head and using alloy:head within the showcase itself)

--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -10,6 +10,7 @@ input_alloy_inputSecret=general:inputSecret.xhtml,InputSecretModelBean.java,Inpu
 input_alloy_inputSourceCode=general:inputSourceCode.xhtml,InputSourceCodeModelBean.java,InputSourceCodeBackingBean.java|default-value:inputSourceCode.xhtml,InputSourceCodeModelBean.java,InputSourceCodeBackingBean.java
 input_alloy_inputText=general:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java|conversion:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java|immediate:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java|validation:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java
 input_alloy_inputTextarea=general:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|conversion:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|immediate:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|validation:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|right-to-left:inputTextarea.xhtml|size:inputTextarea.xhtml
+misc_alloy_head=general:webappHead.xhtml,portletHead.xhtml
 multimedia_alloy_icon=general:icon.xhtml
 multimedia_alloy_image=general:image.xhtml
 output_alloy_message=general:message.xhtml,MessageBackingBean.java
