--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -57,6 +57,8 @@ alloy-form=[javadoc:com.liferay.faces.alloy.component.form.Form] is a [javadoc:j
 alloy-form-general=By default, forms are submitted as a non-Ajax (full-page) postback.
 alloy-form-instant-ajax=Forms can be submitted via Ajax by adding an [vdldoc:f:ajax] child tag to a component such as [vdldoc:alloy:commandButton].
 alloy-form-view-params= View Parameters can be automatically included in full-page postbacks by setting [vdldoc:alloy:form:includeViewParams]=`true`.
+alloy-head=[javadoc:com.liferay.faces.alloy.component.head.Head] is a [javadoc:javax.faces.component.UIOutput] that renders a `&lt;head&gt;` element for webapps, but not for portlets. *In the case of portlets,* the presence of [vdldoc:alloy:head] informs the JSF portlet bridge that JSF resources with `target="head"` should be included in the `&lt;head&gt;` element rendered by the portal.<br/><br/>Since it extends [javadoc:javax.faces.component.html.HtmlHead], it supports all the features of [vdldoc:h:head]. However, *the main benefit* of using [vdldoc:alloy:head] instead of [vdldoc:h:head] is that all of the Liferay Faces Alloy resources (such as alloy.js) are automatically included in the `&lt;head&gt;` element.
+alloy-head-general=The usage of [vdldoc:alloy:head] in webapps is the same as with portlets. However, the surrounding tag in a webapp is `&lt;html&gt;` whereas the surrounding tag in a portlet is [vdldoc:f:view].
 alloy-icon=[javadoc:com.liferay.faces.alloy.component.icon.Icon] is a [javadoc:javax.faces.component.UIComponent] that renders a span which contains an icon specified by the [vdldoc:alloy:icon:name] attribute.
 alloy-icon-general=The component displays an *icon* specified by the [vdldoc:alloy:icon:name] attribute. Names are described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#icons" target="_blank">Alloy Base CSS</a> documentation.
 alloy-image=[javadoc:com.liferay.faces.alloy.component.image.Image] is a [javadoc:javax.faces.component.UIGraphic] component that renders an `&lt;img&gt;` element. Since it extends [javadoc:javax.faces.component.html.HtmlGraphicImage], it supports all the features of [vdldoc:h:image].
@@ -337,6 +339,7 @@ max-length-events=Max Length Events
 message-styling=Message Styling
 min-max-date=Min/Max Date
 mini=Mini
+misc=Misc
 modal=Modal
 model-value=Model Value
 multimedia=Multimedia
