--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -11,6 +11,7 @@ input_alloy_inputSourceCode=general:inputSourceCode.xhtml,InputSourceCodeModelBe
 input_alloy_inputText=general:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java|conversion:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java|immediate:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java|validation:inputText.xhtml,InputTextModelBean.java,InputTextBackingBean.java
 input_alloy_inputTextarea=general:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|conversion:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|immediate:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|validation:inputTextarea.xhtml,InputTextModelBean.java,InputTextBackingBean.java|right-to-left:inputTextarea.xhtml|size:inputTextarea.xhtml
 misc_alloy_body=general:webappBody.xhtml,portletBody.xhtml
+misc_alloy_form=general:form.xhtml,FormBackingBean.java|instant-ajax:form.xhtml,FormBackingBean.java|view-params:form.xhtml,FormBackingBean.java
 misc_alloy_head=general:webappHead.xhtml,portletHead.xhtml
 multimedia_alloy_icon=general:icon.xhtml
 multimedia_alloy_image=general:image.xhtml
