FACES-1975 Configure value JSF ProjectStage in WEB-INF/web.xml descriptors using a Maven profile

--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,7 @@
 		<portlet.war.deployment.type>deploy</portlet.war.deployment.type>
 		<primefaces4.version>4.0</primefaces4.version>
 		<primefaces5.version>5.0</primefaces5.version>
+		<project.stage>Production</project.stage>
 		<richfaces4.version>4.3.2.Final</richfaces4.version>
 		<selenium.version>2.35.0</selenium.version>
 		<spring.version>3.0.7.RELEASE</spring.version>
@@ -456,6 +457,12 @@
 					</plugin>
 				</plugins>
 			</build>
+		</profile>
+		<profile>
+			<id>development</id>
+			<properties>
+				<project.stage>Development</project.stage>
+			</properties>
 		</profile>
 		<profile>
 			<id>ee</id>
