--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,7 @@
 		<portlet.war.deployment.type>deploy</portlet.war.deployment.type>
 		<primefaces3.version>3.5</primefaces3.version>
 		<primefaces4.version>4.0</primefaces4.version>
+		<project.stage>Production</project.stage>
 		<richfaces4.version>4.3.2.Final</richfaces4.version>
 		<selenium.version>2.35.0</selenium.version>
 		<spring.version>3.0.7.RELEASE</spring.version>
@@ -465,6 +466,12 @@
 					</plugin>
 				</plugins>
 			</build>
+		</profile>
+		<profile>
+			<id>development</id>
+			<properties>
+				<project.stage>Development</project.stage>
+			</properties>
 		</profile>
 		<profile>
 			<id>ee</id>
