--- a/issues/portal/FACES-257-portlet/src/main/webapp/WEB-INF/web.xml
+++ b/issues/portal/FACES-257-portlet/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 	-->
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
-		<param-value>Development</param-value>
+		<param-value>${project.stage}</param-value>
 	</context-param>
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
