--- a/demos/bridge/richfaces4-portlet/src/main/webapp/WEB-INF/web.xml
+++ b/demos/bridge/richfaces4-portlet/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 	<!-- 3. Cause the default ExceptionHandler to display a developer-friendly error page. -->
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
-		<param-value>Development</param-value>
+		<param-value>${project.stage}</param-value>
 	</context-param>
 	<!-- Instruct Mojarra to utilize JBoss-EL instead of the EL implementation provided by the servlet container. -->
 	<context-param>
