FACES-1953 Develop alloy:accordion component (Removed AccordionTabEvent in favor of simply TabEvent; added null-check to AccordionRenderer.decode() in order to fix statehelper issue; moved LFA.getAccordionEventTabIndex to private LFAI.getAccordionEventTabIndex) FACES-1901 Develop alloy:tab and alloy:tabView components (Added selectedIndex and tabEventListener attributes) FACES-1714 Develop Liferay Faces Showcase (Added "Selected Tab" and "Server Events" use-cases for alloy:tabView)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -264,6 +264,8 @@ alloy-selectthumbrating-instant-ajax=The component supports *instant Ajax* by si
 alloy-tabview=[javadoc:com.liferay.faces.alloy.component.TabView] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders tabs either statically or dynamically.
 alloy-tabview-general=Tabs can be specified *statically* with [vdldoc:alloy:tab] child tags.
 alloy-tabview-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render tabs *dynamically* when the [vdldoc:alloy:tabView:value] attribute is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:tabView:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
+alloy-tabview-selected-tab=The [vdldoc:alloy:tabView:selectedIndex] attribute is a zero-based integer representing the selected tab. The *client-side state* of the tab is preserved when a form is submitted.
+alloy-tabview-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`tabSelected` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.tabview.TabViewTabEvent]. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:tabView:tabEventListener] attribute.
 append-new-files=Append New Files
 attribute-value=Attribute Value
 back-to-navigation-with=Back to Navigation with
