FACES-1714 Develop Liferay Faces Showcase (changed spelling of Misc to Miscellaneous to match Language.properties in Liferay Portal)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -364,7 +364,7 @@ menu=Menu
 message-styling=Message Styling
 min-max-date=Min/Max Date
 mini=Mini
-misc=Misc
+misc=Miscellaneous
 modal=Modal
 model-value=Model Value
 multimedia=Multimedia
