FACES-1714 Develop Liferay Faces Showcase (added alloy:dataTable under-construction use-cases for filter, lazy, pagination, and sort)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -48,6 +48,10 @@ alloy-commandlink-param=URL *parameters* can be specified via the [vdldoc:alloy:
 alloy-commandlink-value-attribute=Although the component&apos;s [vdldoc:alloy:commandLink:value] attribute is *read-only* (can&apos;t be changed via form submission), it can be used to determine that an item has been selected by the user.
 alloy-datatable=[javadoc:com.liferay.faces.alloy.component.datatable.DataTable] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders a `table` element with tabular data and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags. Since it extends [javadoc:javax.faces.component.html.HtmlDataTable], it supports all the features of [vdldoc:h:dataTable].
 alloy-datatable-general=The [vdldoc:alloy:dataTable:value] attribute tag must be bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:dataTable:var] attribute is used to introduce a variable name into the EL when iterating over the model.
+alloy-datatable-filter=The table rows contained in the [javadoc:javax.faces.model.DataModel] can be limited by *filter* criteria provided by the user.
+alloy-datatable-lazy=The table rows contained in the [javadoc:javax.faces.model.DataModel] can be fetched in a *lazy* (on-demand) manner.
+alloy-datatable-pagination=The table rows contained in the [javadoc:javax.faces.model.DataModel] can be *paginated* and the number of rows per-page is controlled by the value of the [vdldoc:alloy:dataTable:rows] attribute.
+alloy-datatable-sort=The table rows contained in the [javadoc:javax.faces.model.DataModel] can be *sorted* according to criteria provided by the user.
 alloy-dialog=[javadoc:com.liferay.faces.alloy.component.dialog.Dialog] is a [javadoc:javax.faces.component.UIPanel] component that that renders a `&lt;div&gt;` element that is initially styled with `display:none` so that it can be popped-up as an *overlay* by calling the JavaScript API. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 alloy-dialog-general=The dialog can be popped-up by specifying a [vdldoc:alloy:dialog:clientKey] and calling the `show()` JavaScript function. When [vdldoc:alloy:dialog:modal]=`true` the user will be forced to interact with or dismiss the dialog in order to return to the main application. When [vdldoc:alloy:dialog:dismissible]=`true` the dialog can be dismissed by clicking outside of it, unless it is [vdldoc:alloy:dialog:modal].<br /><br />*JavaScript API:*<ul><li>`show()` causes the dialog to be visible</li><li>`hide()` causes the dialog to be invisible</li><li>`toggle()` causes the dialog visibility to be toggled</li></ul>
 alloy-dialog-general-example-1=Default usage with [vdldoc:alloy:dialog:dismissible]=`false`
@@ -335,6 +339,7 @@ expand-all=Expand All
 favorite-liferay-benefit=Favorite Liferay Benefit
 field-label=Field Label
 fieldset-legend=Fieldset Legend
+filter=Filter
 first-name=First Name
 form-action-attribute-view-params-description=The `action` attribute of the rendered `&lt;form&gt;` (shown below) contains view parameters in the query-string. 
 general=General
@@ -354,6 +359,7 @@ instant-ajax=Instant Ajax
 inverse=Inverse
 large=Large
 last-name=Last Name
+lazy=Lazy
 like=Like
 link=Link
 link-to-a-map-of=Link to a map of
@@ -380,6 +386,7 @@ note-multiple-selection-not-available-for-inputdate=*Note:* Multiple selection i
 online=Online
 open-orders=Open Orders
 output=Output
+pagination=Pagination
 panel=Panel
 param=Param
 parameter-value=Parameter Value
@@ -413,6 +420,7 @@ selected-tab=Selected Tab
 server-events=Server Events
 size=Size
 small=Small
+sort=Sort
 source-code=Source Code
 step-1=Step 1
 step-2=Step 2
