FACES-1988 Develop alloy:progressBar component

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -212,8 +212,6 @@ alloy-outputlink-general-example-1=Specifying text for the hyperlink
 alloy-outputlink-general-example-2=Specifying an image for the hyperlink
 alloy-outputlink-general-example-3=Specifying URL parameters with [vdldoc:f:param]
 alloy-outputlink-conversion=The [vdldoc:alloy:outputLink:value] attribute can be *converted* via the [vdldoc:alloy:outputLink:converter] attribute or by specifying an [vdldoc:f:converter] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:outputLink:converterMessage] attribute.
-alloy-outputprogress=[javadoc:com.liferay.faces.alloy.component.outputprogress.OutputProgress] is a [javadoc:javax.faces.component.UIOutput] component that displays a progress bar.
-alloy-outputprogress-general=The general usage of the component is to set the [vdldoc:alloy:outputProgress:value] attribute to a number that represents a percentage.
 alloy-outputremainingchars=[javadoc:com.liferay.faces.alloy.component.outputremainingchars.OutputRemainingChars] is a [javadoc:javax.faces.component.UIOutput] component that displays the number of characters remaining for an associated [vdldoc:alloy:inputText] or [vdldoc:alloy:inputTextarea].
 alloy-outputremainingchars-general=The [vdldoc:alloy:outputRemainingChars:value] attribute can contain text with a `{0}` token that is substituted with the number of remaining characters. If the `value` attribute is not specified, then only the number of remaining characters are rendered.
 alloy-outputremainingchars-general-example-1=Associate with an [vdldoc:alloy:inputText] and specify a `{0}` token within the [vdldoc:alloy:outputRemainingChars:value] attribute.
@@ -261,6 +259,10 @@ alloy-popover=[javadoc:com.liferay.faces.alloy.component.popover.Popover] is a [
 alloy-popover-general=The component *must be associated* with another component (such as [vdldoc:alloy:button]) via the [vdldoc:alloy:popover:for] attribute, so that the popover can be displayed nearby. When [vdldoc:alloy:dialog:dismissible]=`true` the dialog can be dismissed by clicking outside of it.<br /><br />*JavaScript API:*<ul><li>`show()` causes the popover to be visible</li><li>`hide()` causes the popover to be invisible</li><li>`toggle()` causes the popover visibility to be toggled</li></ul>
 alloy-popover-general-example-1=Default usage with [vdldoc:alloy:popover:dismissible]=`true`
 alloy-popover-general-example-2=Alternate usage with [vdldoc:alloy:dialog:dismissible]=`false`
+alloy-progressbar=[javadoc:com.liferay.faces.alloy.component.progressbar.ProgressBar] is a [javadoc:javax.faces.component.UIComponent] that displays a progress bar.
+alloy-progressbar-general=The component can be used to display *server-side* progress. If an [vdldoc:f:ajax] child tag is specified with [vdldoc:f:ajax:event]=`poll` (or if no event is specified since "poll" is the default), the component will poll the server for progress by checking the [vdldoc:alloy:progressBar:value] attribute on the server and updating the client-side widget to the new value. The [vdldoc:alloy:progressBar:pollingDelay] attribute can be used to specify the *delay* (in milliseconds) before dispatching a polling Ajax request after recieving the response of a previous request.<br /><br />*JavaScript API:*<ul><li>`start()` causes the <code>progressBar</code> to begin polling the server.</li><li>`stop()` causes the <code>progressBar</code> to stop polling the server.</li></ul>
+alloy-progressbar-client-side=The component can be used to track *client-side progress* by utilizing the JavaScript `set` method.
+alloy-progressbar-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`progressComplete` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.progressbar.ProgressCompleteEvent]. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:progressBar:completeListener] attribute. The [vdldoc:alloy:progressBar:pollingDelay] attribute can be used to specify the *delay* (in milliseconds) before dispatching a polling Ajax request after recieving the response of a previous request.
 alloy-row=[javadoc:com.liferay.faces.alloy.component.row.Row] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags.
 alloy-row-general=The component takes [vdldoc:alloy:column] tags as children in order to layout components in a tabular grid.
 alloy-row-column-width=The *width* of an [vdldoc:alloy:column] can be specified via the [vdldoc:alloy:column:width] attribute.
@@ -371,6 +373,7 @@ click-here-to-show-the-popover=Click here to show the popover
 click-here-to-toggle-the-dialog=Click here to toggle the dialog
 click-here-to-toggle-the-popover-and-click-outside-the-popover-to-hide=Click here to toggle the popover and click outside the popover to hide
 client-filter-type=Client Filter Type
+client-side=Client Side
 column-width=Column Width
 column-offset=Column Offset
 collapse-all=Collapse All
@@ -378,6 +381,7 @@ copy-1234-to-the-value-of-the-hidden-input=Copy '1234' to the value of the hidde
 copy-a-date-to-the-value-of-the-hidden-input=Copy a date to the value of the hidden input
 copy-a-valid-email-address-to-the-hidden-input=Copy a valid email address to the hidden input
 copy-an-invalid-email-address-to-the-hidden-input=Copy an invalid email address to the hidden input
+complete=Complete
 completed-orders=Completed Orders
 component=Component
 conversion=Conversion
@@ -584,6 +588,7 @@ redisplay=Redisplay
 rendered=Rendered
 required=Required
 required-message=This is a required field
+reset-progress=Reset Progress
 resource=Resource
 right-to-left=Right-To-Left
 rowlevel=Row-Level
@@ -596,6 +601,8 @@ size=Size
 small=Small
 sort=Sort
 source-code=Source Code
+start-progress=Start Progress
+stop-progress=Stop Progress
 step-1=Step 1
 step-2=Step 2
 step-3=Step 3
